<resources>
    <string name="app_name">HappyRoutine</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="e_mail">E-Mail</string>
    <string name="e_mailOrUsername">E-Mail</string>
    <string name="password">Password</string>
    <string name="hint">hint</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="username">Username</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="i_am_already_a_member">I am already a member</string>
    <string name="new_here_sign_up_instead">New here? Sign up instead</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="happyroutine">HappyRoutine</string>
    <string name="button_goToLogIn">Log In</string>
    <string name="button_goToSignUp">Sign Up</string>
    <string name="text_happyroutine">HappyRoutine</string>
    <string name="logo_happyRoutine">Logo Happy Routine</string>
    <string name="slogan">Enjoy improving your health</string>
    <string name="Weight">WEIGHT</string>
    <string name="Trainning_days">TRAINNING DAYS</string>
    <string name="Weight_graphic">WEIGHT GRAPHIC</string>
    <string name="ok">OK</string>
    <string name="Weight_entry">Weight entry</string>
    <string name="age">Age</string>
    <string name="location">Location</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="platform_answer">Do you want to be part of the platform?</string>
    <string name="platform_answer_social">Would you like to be part of the platform?</string>
    <string name="not_part_of_platform">This feature is only available for social platform users</string>
    <string name="edit_profile">Edit profile</string>
    <string name="edit_photo">Edit photo</string>
    <string name="eggs">Eggs</string>
    <string name="chicken">Chicken</string>
    <string name="onion">Onion</string>
    <string name="bread">Bread</string>
    <string name="tomato">Tomato</string>
    <string name="latucce">Latucce</string>
    <string name="olives">Olives</string>
    <string name="milk">Milk</string>
    <string name="oil">Oil</string>
    <string name="tuna">Tuna</string>
    <string name="pumpkin">Pumpkin</string>
    <string name="lentils">Lentils</string>
    <string name="not_wanted_food">Food I don\'t want</string>
    <string name="chickpeas">Chickpeas</string>
    <string name="corn">Corn</string>
    <string name="save">Save</string>
    <string name="reset_password">Reset Password</string>
    <string name="e_mail_reset_password">E-Mail</string>
    <string name="email_reset_password">We will send you an e-mail with a link to reset your password.</string>
    <string name="name_surname_example">Joan Martin Martrus</string>
    <string name="name_surname_example2">Manolo Perez Ruiz</string>
    <string name="exercise">Exercise</string>
    <string name="diet">Diet</string>
    <string name="statitiscs">Statistics</string>
    <string name="social">Social</string>
    <string name="text_backToLogIn">text_backToLogIn</string>
    <string name="text_backToLogin">Go back to LogIn</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="objectives">Objectives</string>
    <string name="lactose_intolerant">Lactose Intolerant</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="celiac">Celiac</string>
    <string name="offer">Offer</string>
    <string name="exercise_advice">Exercise advice</string>
    <string name="diet_advice">Diet Advice</string>
    <string name="company">Company</string>
    <string name="needs">Needs</string>
    <string name="gain_weight">Gain weight</string>
    <string name="lose_weight">Lose weight</string>
    <string name="gain_muscle">Gain muscle</string>
    <string name="exercise_for_health">Exercise for health</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="birthday">Birthday</string>
    <string name="edit_food_i_do_not_want">Edit food I do not like</string>
    <string name="log_out">Log out</string>
    <string name="delete_profile">Delete profile</string>

    <string name="open">open</string>
    <string name="close">close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_food_you_do_not_like">Select Food You Do Not Like</string>
    <string name="button_newChat">New Chat</string>


    <string name="recommended">RECOMMENDED</string>
    <string name="myFavouritesTrainnings">MY FAVOURITES</string>
    <string name="beginner">BEGINNER</string>
    <string name="intermediate">INTERMEDIATE</string>
    <string name="advanced">ADVANCED</string>
    <string name="expert">EXPERT</string>
    <string name="view_all_exercices">view all exercices</string>
    <string name="select_your_trainning">SELECT YOUR TRAINNING</string>
    <string name="exercises">EXERCISES</string>
    <string name="last_message">Last message</string>
    <string name="joinPlatform">Join Platform</string>
    <string name="you_are_not_participating">you_are_not_participating</string>
    <string name="this_feature_is_only_available_for_users_that_are_participating_at_the_platform">This feature is only available for users that are participating at the platform</string>

    <string-array name="recommended">
        <item>Recommended</item>
        <item>trainning 1</item>
        <item>trainning 2</item>
        <item>trainning 3</item>
    </string-array>
    <string-array name="myFavouritesTrainnings">
        <item>My Favourites</item>
        <item>trainning 1</item>
        <item>trainning 2</item>
        <item>trainning 3</item>
    </string-array>
    <string-array name="beginner">
        <item>Beginner</item>
        <item>trainning 1</item>
        <item>trainning 2</item>
        <item>trainning 3</item>
    </string-array>
    <string-array name="intermediate">
        <item>Intermediate</item>
        <item>trainning 1</item>
        <item>trainning 2</item>
        <item>trainning 3</item>
    </string-array>
    <string-array name="advanced">
        <item>Advanced</item>
        <item>trainning 1</item>
        <item>trainning 2</item>
        <item>trainning 3</item>
    </string-array>
    <string-array name="expert">
        <item>Expert</item>
        <item>trainning 1</item>
        <item>trainning 2</item>
        <item>trainning 3</item>
    </string-array>


    <string-array name="recommended_exercices">
        <item>Recommended</item>
        <item>exercices 1</item>
        <item>exercices 2</item>
        <item>exercices 3</item>
    </string-array>
    <string-array name="myFavouritesTrainnings_exercices">
        <item>My Favourites</item>
        <item>exercices 1</item>
        <item>exercices 2</item>
        <item>exercices 3</item>
    </string-array>
    <string-array name="Stretching">
        <item>Stretching</item>
        <item>exercices 1</item>
        <item>exercices 2</item>
        <item>exercices 3</item>
    </string-array>
    <string-array name="Abds">
        <item>Abds</item>
        <item>exercices 1</item>
        <item>exercices 2</item>
        <item>exercices 3</item>
    </string-array>
    <string-array name="Arms">
        <item>Arms</item>
        <item>exercices 1</item>
        <item>exercices 2</item>
        <item>exercices 3</item>
    </string-array>
    <string-array name="Legs">
        <item>Legs</item>
        <item>exercices 1</item>
        <item>exercices 2</item>
        <item>exercices 3</item>
    </string-array>
    <string-array name="Buttocks">
        <item>Buttocks</item>
        <item>exercices 1</item>
        <item>exercices 2</item>
        <item>exercices 3</item>
    </string-array>
    <string-array name="Chest">
        <item>Chest</item>
        <item>exercices 1</item>
        <item>exercices 2</item>
        <item>exercices 3</item>
    </string-array>
    <string-array name="Back">
        <item>Back</item>
        <item>exercices 1</item>
        <item>exercices 2</item>
        <item>exercices 3</item>
    </string-array>
    <string-array name="Cardio">
        <item>Cardio</item>
        <item>exercices 1</item>
        <item>exercices 2</item>
        <item>exercices 3</item>
    </string-array>
    <string-array name="FullBody">
        <item>Full Body</item>
        <item>exercices 1</item>
        <item>exercices 2</item>
        <item>exercices 3</item>
    </string-array>


</resources>
