<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="48dp"
            android:layout_marginVertical="48dp"
            android:layout_marginRight="48dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="18sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/radioButtonMale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:layout_weight="1"/>
                <RadioButton
                    android:id="@+id/radioButtonFemale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:layout_weight="1"/>
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/edit_text_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/age"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/edit_text_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/location"
                android:importantForAutofill="no"
                android:inputType="textPostalAddress" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/edit_text_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/height"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/edit_text_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/weight"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/objectives"
                android:textSize="18sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <com.yuxingxin.library.MultiRadioGroup
                android:id="@+id/multiLineRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gain_weight"
                        android:layout_weight="1"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lose_weight"
                        android:layout_weight="1"/>

                </RadioGroup>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gain_muscle"
                        android:layout_weight="1"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/exercise_for_health"
                        android:layout_weight="1"/>

                </RadioGroup>

            </com.yuxingxin.library.MultiRadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diet"
                android:textSize="18sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBoxLinearLayout"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lactose_intolerant"
                        android:id="@+id/checkBoxLactoseIntolerant"/>
                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/vegetarian"
                        android:id="@+id/checkBoxVegetarian"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/celiac"
                        android:id="@+id/checkBoxCeliac"/>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/platform_answer"/>

                <CheckBox
                    android:id="@+id/checkBoxPlatformAnswer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/offer"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"/>
                    <CheckBox
                        android:id="@+id/offerExerciseAdviceCheckbox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/exercise_advice"/>
                    <CheckBox
                        android:id="@+id/offerDietAdviceCheckbox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/diet_advice"/>
                    <CheckBox
                        android:id="@+id/offerCompanyCheckbox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/company"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/needs"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"/>
                    <CheckBox
                        android:id="@+id/needsExerciseAdviceCheckbox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/exercise_advice"/>
                    <CheckBox
                        android:id="@+id/needsDietAdviceCheckbox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/diet_advice"/>
                    <CheckBox
                        android:id="@+id/needsCompanyCheckbox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/company"/>
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
        </LinearLayout>
    </ScrollView>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/ok"
        android:padding="8dp"
        android:background="@drawable/rounded_button"
        android:textColor="#FFFFFF"
        android:onClick="goToUserExercise"
        android:layout_weight="1"
        android:layout_marginBottom="16dp"
        android:layout_margin="16dp"/>

</LinearLayout>