<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:padding="48dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="196dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="196dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo_happyRoutine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/happy_routine_logo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/tv_text_email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:hint="@string/e_mail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/tv_text_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/text_confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="18dp"/>

    <Button
        android:id="@+id/button_signUp"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="185dp"
        android:layout_height="34dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.4"
        android:background="@drawable/rounded_button"
        android:onClick="signUpAndGoUserInformation"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:onClick="goToLogIn"
        android:text="@string/i_am_already_a_member"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#0E8AEE" />

</LinearLayout>